--- a/02-inline-internal-stylesheets/materials/basic.html
+++ b/02-inline-internal-stylesheets/materials/basic.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>CSS:The Missing Manual -- Chapter 2</title>
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 
