--- a/04-inheritance/materials/inheritance.html
+++ b/04-inheritance/materials/inheritance.html
@@ -4,8 +4,28 @@
 <meta charset="UTF-8">
 <title>Inheritance In Action</title>
 
+<style type="text/css">
+	#container{
+		width: 60%;
+		margin: 0 auto;
+		font-family: sans-serif;
+		color: goldenrod;
+	}
+	img{
+		width: 100%;
+	}
+	p{
+		color: red;
+		border-left:20px goldenrod solid;
+		padding-left: 15px;
+		margin-left:40px;
+	}
+
+</style>
+
 </head>
 <body>
+<div id="container">
 <div><img src="images/headline.png" width="900" height="214" alt="CSS: The Missing Manual">
 </div>
 <h1>The Amazing World of CSS</h1>
@@ -21,5 +41,6 @@
 <p><strong>Sed ut perspiciatis</strong> unde omnis iste natus error sit <em>voluptatem accusantium</em> doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia  eos qui ratione voluptatem sequi nesciunt. odi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima <strong>veniam, quis nostrum</strong> exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
 <h3>Me Neither!</h3>
 <p><strong>Sed ut perspiciatis</strong> unde omnis iste natus error sit <em>voluptatem accusantium</em> doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia  eos qui ratione voluptatem sequi nesciunt. </p>
+</div>
 </body>
 </html>
